# Gtk2048

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
src/: game.cpp  game.h  main.cpp  myarea.cpp  myarea.h
